--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Three.js Scene</title>
+    <title>Buabue Simulator</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <canvas id="three-canvas"></canvas>
-    <script type="module" src="main.js"></script>
+    <script type="module" src="index.js"></script>
 </body>
 </html>
