--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Buabue Simulator</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/77b55cf4ee.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <canvas id="three-canvas"></canvas>
